<resources>
    <string name="app_name">MyGeoalarm</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="destination_name">Destination name</string>
    <string name="radius">Radius (km)</string>
    <string name="save_destination">Save destination</string>
    <string name="open_map">Open map</string>
    <string name="add_new_destination">Add new destination</string>
    <string name="add_gps">Add GPS</string>
    <string name="change_alarm_song">Change alarm song</string>
    <string name="selected_destination">Selected destination</string>
    <string name="activate">ACTIVATE</string>
    <string name="deactivate">DEACTIVATE</string>
</resources>
