<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@+id/scrollView"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/destination_name"
                android:textSize="20dp"
                />

            <EditText
                android:id="@+id/addDestinationName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/longitude"
                android:textSize="20dp"
                />

            <EditText
                android:id="@+id/addDestinationLongitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textSize="20dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/latitude"
                android:textSize="20dp"
                />

            <EditText
                android:id="@+id/addDestinationLatitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textSize="20dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/radius"
                android:textSize="20dp"
                />

            <EditText
                android:id="@+id/addDestinationRadius"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textSize="20dp"
                />

            <Button
                android:id="@+id/openMap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/open_map"
                android:textSize="20dp"/>

            <Button
                android:id="@+id/addDestinationSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/save_destination"
                android:textSize="20dp"/>


        </LinearLayout>

    </LinearLayout>
</ScrollView>