<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selected_destination"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/destination_name"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="25dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/destination_coordinates"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:textSize="14dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/destination_radius"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:textSize="18dp"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/destination_activate"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/activate"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/destination_deactivate"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/deactivate"
        />
</LinearLayout>